force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/QuotationDate__c.field-meta.xml
<CustomField>
    <fullName>QuotationDate__c</fullName>
    <description>Rendered on PDF</description>
    <label>Quotation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>