force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/QuotationNumber__c.field-meta.xml
<CustomField>
    <fullName>QuotationNumber__c</fullName>
    <description>Rendered text on Quote Template.</description>
    <inlineHelpText>Rendered text on Quote Template.</inlineHelpText>
    <label>Quotation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>