force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/Surcharge_Info__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Info__c</fullName>
    <label>Surcharge Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>